Добавляет hero-секцию

--- a/source/index.html
+++ b/source/index.html
@@ -36,6 +36,16 @@
       </ul>
     </nav>
   </header>
+
+  <main class="main">
+    <h1 class="visually-hidden">Интернет-магазин питания для котов.</h1>
+
+    <section class="hero">
+      <h2 class="hero__title">Функциональное питание для котов</h2>
+      <p class="hero__text">Занялся собой? Займись котом!</p>
+      <a class="hero__button button button--primary" href="form.html">Подобрать программу</a>
+    </section>
+  </main>
 </body>
 
 </html>
