--- a/source/index.html
+++ b/source/index.html
@@ -45,6 +45,26 @@
       <p class="hero__text">Занялся собой? Займись котом!</p>
       <a class="hero__button button button--primary" href="form.html">Подобрать программу</a>
     </section>
+
+    <section class="programs">
+      <h2 class="visually-hidden">Программы питания.</h2>
+
+      <ul class="programs__list">
+        <li class="programs__item">
+          <h3 class="programs__title">Похудение</h3>
+          <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <img class="programs__image" src="" alt="Нарисованный худой кот.">
+          <a class="programs__link" href="catalog.html">Каталог slim</a>
+        </li>
+
+        <li class="programs__item">
+          <h3 class="programs__title">Набор массы</h3>
+          <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <img class="programs__image" src="" alt="Нарисованный тигр.">
+          <a class="programs__link" href="catalog.html">Каталог pro</a>
+        </li>
+      </ul>
+    </section>
   </main>
 </body>
 
