--- a/source/index.html
+++ b/source/index.html
@@ -65,6 +65,28 @@
         </li>
       </ul>
     </section>
+
+    <section class="instruction">
+      <h2 class="instruction__title">Как это работает</h2>
+
+      <ul class="instruction__list">
+        <li class="instruction__item instruction__item--leaf">
+          <p class="instruction__description">Функциональное питание содержит только полезные питательные вещества.</p>
+        </li>
+
+        <li class="instruction__item instruction__item--water">
+          <p class="instruction__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+        </li>
+
+        <li class="instruction__item instruction__item--tableware">
+          <p class="instruction__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+        </li>
+
+        <li class="instruction__item instruction__item--clock">
+          <p class="instruction__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        </li>
+      </ul>
+    </section>
   </main>
 </body>
 
