--- a/source/index.html
+++ b/source/index.html
@@ -87,6 +87,37 @@
         </li>
       </ul>
     </section>
+
+    <section class="case">
+      <h2 class="case__title">Живой пример</h2>
+
+      <p class="case__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+
+      <dl class="case__list">
+        <div class="case__item">
+          <dd class="case__number">5 кг</dd>
+          <dt class="case__description">снижение веса</dt>
+        </div>
+
+        <div class="case__item">
+          <dd class="case__number">60 дней</dd>
+          <dt class="case__description">затрачено времени</dt>
+        </div>
+      </dl>
+
+      <p class="case__price">Затраты на питание:<span class="case__price-amount">15 000 руб.</span></p>
+
+      <div class="case__slider compare-slider">
+        <div class="compare-slider__images">
+          <img class="compare-slider__image compare-slider__image--before" src="" alt="Толстый кот до похудения.">
+          <img class="compare-slider__image compare-slider__image--after" src="" alt="Нормальный кот после похудения.">
+        </div>
+
+        <button class="compare-slider__button" type="button">
+          <span class="visually-hidden">Поменять изображение.</span>
+        </button>
+      </div>
+    </section>
   </main>
 </body>
 
