--- a/source/index.html
+++ b/source/index.html
@@ -119,6 +119,49 @@
       </div>
     </section>
   </main>
+
+  <footer class="main-footer">
+    <div class="footer__contacts">
+      <p class="footer__text">Приглашаем к сотрудничеству дилеров!</p>
+      <address class="footer__address address">
+        <p class="address-text">ул. Большая Конюшенная, д. 19/8</p>
+        <p class="address-text">Санкт-Петербург</p>
+      </address>
+    </div>
+
+    <a class="footer__map" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
+      <img class="footer__image" src="" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
+    </a>
+
+    <a class="footer__logo" href="#" aria-current="page">
+      <img class="footer__logo-text" src="" alt="Логотип Кэт Энерджи.">
+    </a>
+
+    <ul class="footer__list socials">
+      <li class="socials__item">
+        <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
+          <img class="socials__image" src="" alt="ВКонтакте.">
+        </a>
+      </li>
+
+      <li class="socials__item">
+        <a class="socials__link socials__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+          <img class="socials__image" src="" alt="YouTube.">
+        </a>
+      </li>
+
+      <li class="socials__item">
+        <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
+          <img class="socials__image" src="" alt="Телеграм.">
+        </a>
+      </li>
+    </ul>
+
+    <a class="html-academy" href="https://htmlacademy.ru/">
+      <span class="html-academy__text">HTML Academy</span>
+      <img class="html-academy__logo" src="" alt="Логотип HTML Academy.">
+    </a>
+  </footer>
 </body>
 
 </html>
