--- a/source/index.html
+++ b/source/index.html
@@ -95,13 +95,13 @@
 
       <dl class="case__list">
         <div class="case__item">
-          <dd class="case__number">5 кг</dd>
           <dt class="case__description">снижение веса</dt>
+          <dd class="case__number">5 кг</dd>
         </div>
 
         <div class="case__item">
-          <dd class="case__number">60 дней</dd>
           <dt class="case__description">затрачено времени</dt>
+          <dd class="case__number">60 дней</dd>
         </div>
       </dl>
 
@@ -121,23 +121,23 @@
   </main>
 
   <footer class="main-footer">
-    <div class="footer__contacts">
-      <p class="footer__text">Приглашаем к сотрудничеству дилеров!</p>
-      <address class="footer__address address">
+    <div class="main-footer__contacts">
+      <p class="main-footer__text">Приглашаем к сотрудничеству дилеров!</p>
+      <address class="main-footer__address address">
         <p class="address-text">ул. Большая Конюшенная, д. 19/8</p>
         <p class="address-text">Санкт-Петербург</p>
       </address>
     </div>
 
-    <a class="footer__map" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
-      <img class="footer__image" src="" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
+    <a class="main-footer__map" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
+      <img class="main-footer__image" src="" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
     </a>
 
-    <a class="footer__logo" href="#" aria-current="page">
-      <img class="footer__logo-text" src="" alt="Логотип Кэт Энерджи.">
+    <a class="main-footer__logo" href="#" aria-current="page">
+      <img class="main-footer__logo-text" src="" alt="Логотип Кэт Энерджи.">
     </a>
 
-    <ul class="footer__list socials">
+    <ul class="main-footer__list socials">
       <li class="socials__item">
         <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
           <img class="socials__image" src="" alt="ВКонтакте.">
