Добавляет разметку для каталога

--- a/source/index.html
+++ b/source/index.html
@@ -12,8 +12,9 @@
 <body class="page__body">
   <header class="main-header">
     <a class="main-header__logo" href="#" aria-current="page">
-      <img class="main-header__logo-image" src="" alt="Логотип Кэт Энерджи.">
-      <img class="main-header__logo-text" src="" alt="Кэт Энерджи.">
+      <picture>
+        <img class="main-header__logo-image" src="" alt="Логотип Кэт Энерджи.">
+      </picture>
     </a>
 
     <nav class="main-nav">
