Добавляет базовые стили для главной

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -47,7 +47,7 @@
       <ul class="catalog__list">
         <li class="catalog__item">
           <picture>
-            <img class="catalog__image" src="images/catalog-1@1x.png" srcset="images/catalog-1@2x.png 2px" width="68" height="86" alt="Корм Cat Energy PRO 500 грамм.">
+            <img class="catalog__image" src="images/catalog-1@1x.png" srcset="images/catalog-1@2x.png 2x" width="68" height="86" alt="Корм Cat Energy PRO 500 грамм.">
           </picture>
           <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
 
@@ -125,7 +125,7 @@
 
         <li class="catalog__item">
           <picture>
-            <img class="catalog__image" src="images/catalog-4@1x.png" srcset="images/catalog-4@2x.png 2px" width="84" height="100" alt="Корм Cat Energy PRO 1000 грамм.">
+            <img class="catalog__image" src="images/catalog-4@1x.png" srcset="images/catalog-4@2x.png 2x" width="84" height="100" alt="Корм Cat Energy PRO 1000 грамм.">
           </picture>
           <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
 
@@ -285,9 +285,9 @@
 
     <a class="main-footer__map" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
       <picture>
-        <source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1px, images/map-desktop@2px.png 2px">
-        <source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1px, images/map-tablet@2px.png 2px">
-        <img class="main-footer__image" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2px" width="320" height="362" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
+        <source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x">
+        <source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
+        <img class="main-footer__image" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
       </picture>
     </a>
 
