--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@
     <h1 class="visually-hidden">Интернет-магазин питания для котов.</h1>
 
     <section class="hero">
-      <h2 class="hero__title">Функциональное питание для котов</h2>
+      <h2 class="hero__title section-title">Функциональное питание для котов</h2>
       <p class="hero__text">Занялся собой? Займись котом!</p>
       <a class="hero__button button button--primary" href="form.html">Подобрать программу</a>
     </section>
@@ -57,14 +57,14 @@
       <ul class="programs__list">
         <li class="programs__item">
           <h3 class="programs__title">Похудение</h3>
-          <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <p class="programs__description regular-text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <img class="programs__image" src="" alt="Нарисованный худой кот.">
           <a class="programs__link" href="catalog.html">Каталог slim</a>
         </li>
 
         <li class="programs__item">
           <h3 class="programs__title">Набор массы</h3>
-          <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <p class="programs__description regular-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <img class="programs__image" src="" alt="Нарисованный тигр.">
           <a class="programs__link" href="catalog.html">Каталог pro</a>
         </li>
@@ -72,40 +72,40 @@
     </section>
 
     <section class="instruction">
-      <h2 class="instruction__title">Как это работает</h2>
+      <h2 class="instruction__title section-title">Как это работает</h2>
 
       <ul class="instruction__list">
         <li class="instruction__item instruction__item--leaf">
-          <p class="instruction__description">Функциональное питание содержит только полезные питательные вещества.</p>
+          <p class="instruction__description regular-text">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
 
         <li class="instruction__item instruction__item--water">
-          <p class="instruction__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          <p class="instruction__description regular-text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
         </li>
 
         <li class="instruction__item instruction__item--tableware">
-          <p class="instruction__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          <p class="instruction__description regular-text">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
 
         <li class="instruction__item instruction__item--clock">
-          <p class="instruction__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          <p class="instruction__description regular-text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
     </section>
 
     <section class="case">
-      <h2 class="case__title">Живой пример</h2>
+      <h2 class="case__title section-title">Живой пример</h2>
 
-      <p class="case__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+      <p class="case__description regular-text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 
       <dl class="case__list">
         <div class="case__item">
-          <dt class="case__description">снижение веса</dt>
+          <dt class="case__text">снижение веса</dt>
           <dd class="case__number">5 кг</dd>
         </div>
 
         <div class="case__item">
-          <dt class="case__description">затрачено времени</dt>
+          <dt class="case__text">затрачено времени</dt>
           <dd class="case__number">60 дней</dd>
         </div>
       </dl>
@@ -138,16 +138,16 @@
     <div class="main-footer__contacts">
       <p class="main-footer__text">Приглашаем к сотрудничеству дилеров!</p>
       <address class="main-footer__address address">
-        <p class="address-text">ул. Большая Конюшенная, д. 19/8</p>
-        <p class="address-text">Санкт-Петербург</p>
+        <p class="address-text regular-text">ул. Большая Конюшенная, д. 19/8</p>
+        <p class="address-text regular-text">Санкт-Петербург</p>
       </address>
     </div>
 
     <a class="main-footer__map" href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&z=16.7">
       <picture>
-        <source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1px, images/map-desktop@2px.png 2px">
-        <source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1px, images/map-tablet@2px.png 2px">
-        <img class="main-footer__image" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2px" width="320" height="362" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
+        <source type="image/png" media="(min-width: 1440px)" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x">
+        <source type="image/png" media="(min-width: 768px)" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
+        <img class="main-footer__image" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с адресом: город Санкт-Петербург, улица Большая Конюшенная, дом 19/8.">
       </picture>
     </a>
 
@@ -176,7 +176,7 @@
     </ul>
 
     <a class="html-academy" href="https://htmlacademy.ru/">
-      <span class="html-academy__text">HTML Academy</span>
+      <span class="html-academy__text regular-text">HTML Academy</span>
       <img class="html-academy__logo" src="" alt="Логотип HTML Academy.">
     </a>
   </footer>
