--- a/source/index.html
+++ b/source/index.html
@@ -56,17 +56,17 @@
       <a class="hero__button button button--primary" href="form.html">Подобрать программу</a>
     </section>
 
-    <section class="programs">
+    <section class="programs container">
       <h2 class="visually-hidden">Программы питания.</h2>
 
       <ul class="programs__list">
-        <li class="programs__item">
+        <li class="programs__item programs__item--slim">
           <h3 class="programs__title">Похудение</h3>
           <p class="programs__description regular-text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="programs__link" href="catalog.html">Каталог slim</a>
         </li>
 
-        <li class="programs__item">
+        <li class="programs__item programs__item--pro">
           <h3 class="programs__title">Набор массы</h3>
           <p class="programs__description regular-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="programs__link" href="catalog.html">Каталог pro</a>
@@ -74,7 +74,7 @@
       </ul>
     </section>
 
-    <section class="instruction">
+    <section class="instruction container">
       <h2 class="instruction__title section-title">Как это работает</h2>
 
       <ul class="instruction__list">
@@ -96,7 +96,7 @@
       </ul>
     </section>
 
-    <section class="case">
+    <section class="case container">
       <h2 class="case__title section-title">Живой пример</h2>
 
       <p class="case__description regular-text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
@@ -138,7 +138,7 @@
   </main>
 
   <footer class="main-footer">
-    <div class="main-footer__contacts">
+    <div class="main-footer__contacts container">
       <p class="main-footer__text">Приглашаем к сотрудничеству дилеров!</p>
       <address class="main-footer__address address">
         <p class="address-text regular-text">ул. Большая Конюшенная, д. 19/8</p>
