--- a/source/index.html
+++ b/source/index.html
@@ -160,35 +160,38 @@
       </div>
     </a>
 
-    <div class="main-footer__info">
-      <a class="main-footer__logo" href="#" aria-current="page">
+    <div class="main-footer__info container">
+      <a class="main-footer__logo logo-text" href="#" aria-current="page">
         <img class="main-footer__logo-text" src="images/logo-text.svg" width="128" height="24" alt="Логотип Кэт Энерджи.">
       </a>
 
       <ul class="main-footer__list socials">
         <li class="socials__item">
           <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
-            <img class="socials__image" src="" alt="ВКонтакте.">
+            <span class="visually-hidden">ВКонтакте.</span>
           </a>
         </li>
 
         <li class="socials__item">
           <a class="socials__link socials__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-            <img class="socials__image" src="" alt="YouTube.">
+            <span class="visually-hidden">YouTube.</span>
           </a>
         </li>
 
         <li class="socials__item">
           <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
-            <img class="socials__image" src="" alt="Телеграм.">
+            <span class="visually-hidden">Телеграм.</span>
           </a>
         </li>
       </ul>
 
-      <a class="html-academy" href="https://htmlacademy.ru/">
+      <div class="html-academy">
         <span class="html-academy__text regular-text">HTML Academy</span>
-        <img class="html-academy__logo" src="" alt="Логотип HTML Academy.">
-      </a>
+        
+        <a class="html-academy__link" href="https://htmlacademy.ru/">
+          <span class="visually-hidden">Логотип HTML Academy.</span>
+        </a>
+      </div>
     </div>
   </footer>
 </body>
