--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Cat energy</title>
+  <title>Главная</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="favicons/favicon.svg" type="image/svg+xml">
@@ -187,7 +187,7 @@
 
       <div class="html-academy">
         <span class="html-academy__text regular-text">HTML Academy</span>
-        
+
         <a class="html-academy__link" href="https://htmlacademy.ru/">
           <span class="visually-hidden">Логотип HTML Academy.</span>
         </a>
