--- a/source/index.html
+++ b/source/index.html
@@ -138,7 +138,7 @@
   </main>
 
   <footer class="main-footer">
-    <div class="main-footer__contacts container">
+    <div class="main-footer__contacts">
       <p class="main-footer__text">Приглашаем <br>к сотрудничеству дилеров!</p>
       <address class="main-footer__address address">
         <p class="address-text regular-text">ул. Большая Конюшенная, д. 19/8</p>
