--- a/source/form.html
+++ b/source/form.html
@@ -92,7 +92,12 @@
       </fieldset>
 
       <fieldset class="main-form__group contacts-group">
-        <legend class="main-form__legend crossed-title">Контактные данные (владельца кота)</legend>
+        <legend class="visually-hidden">Контактные данные.</legend>
+        <h2 class="main-form__legend crossed-title">
+          <span class="crossed-title__text">
+            <span class="crossed-title__wrapper">Контактные данные (владельца кота)</span>
+          </span>
+        </h2>
 
         <ul  class="main-form__list contacts-group__list">
           <li class="contacts-group__item input-email">
@@ -108,7 +113,12 @@
       </fieldset>
 
       <fieldset class="main-form__group textarea-group">
-        <legend class="main-form__legend crossed-title">Комментарий</legend>
+        <legend class="visually-hidden">Комментарий о питомце.</legend>
+        <h2 class="main-form__legend crossed-title">
+          <span class="crossed-title__text">
+            <span class="crossed-title__wrapper">Комментарий</span>
+          </span>
+        </h2>
 
         <label for="comment">
           <span class="visually-hidden">Комментарий о питомце.</span>
@@ -117,7 +127,12 @@
       </fieldset>
 
       <fieldset class="main-form__group check-group">
-        <legend class="main-form__legend crossed-title">Дополнительно</legend>
+        <legend class="visually-hidden">Дополнительные опции.</legend>
+        <h2 class="main-form__legend crossed-title">
+          <span class="crossed-title__text">
+            <span class="crossed-title__wrapper">Дополнительно</span>
+          </span>
+        </h2>
 
         <ul class="main-form__list check-group__list">
           <li class="check-group__item checkbox">
