--- a/source/index.html
+++ b/source/index.html
@@ -115,24 +115,30 @@
 
       <p class="case__price">Затраты на питание:<span class="case__price-amount">15 000 руб.</span></p>
 
-      <div class="case__slider compare-slider">
-        <!-- <div class="compare-slider__images">
-          <picture>
-            <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-before-desktop@1x.png 1x, images/cat-before-desktop@2x.png 2x">
-            <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x">
-            <img class="compare-slider__image compare-slider__image--before" src="images/cat-before-mobile@1x.png" srcset="images/cat-before-mobile@2x.png 2x" width="280" height="256" alt="Толстый кот до похудения.">
-          </picture>
+      <div class="case__slider">
+        <div class="compare-slider">
+          <ul class="compare-slider__list">
+            <li class="compare-slider__screen compare-slider__screen--before">
+              <picture>
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-before-desktop@1x.png 1x, images/cat-before-desktop@2x.png 2x">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/cat-before-tablet@1x.png 1x, images/cat-before-tablet@2x.png 2x">
+                <img class="compare-slider__image compare-slider__image--before" src="images/cat-before-mobile@1x.png" srcset="images/cat-before-mobile@2x.png 2x" width="280" height="256" alt="Толстый кот до похудения.">
+              </picture>
+            </li>
 
-          <picture>
-            <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-after-desktop@1x.png 1x, images/cat-after-desktop@2x.png 2x">
-            <source type="image/png" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.png 1x, images/cat-after-tablet@2x.png 2x">
-            <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Нормальный кот после похудения.">
-          </picture>
+            <li class="compare-slider__screen compare-slider__screen--after">
+              <picture>
+                <source type="image/png" media="(min-width: 1440px)" srcset="images/cat-after-desktop@1x.png 1x, images/cat-after-desktop@2x.png 2x">
+                <source type="image/png" media="(min-width: 768px)" srcset="images/cat-after-tablet@1x.png 1x, images/cat-after-tablet@2x.png 2x">
+                <img class="compare-slider__image compare-slider__image--after" src="images/cat-after-mobile@1x.png" srcset="images/cat-after-mobile@2x.png 2x" width="280" height="256" alt="Нормальный кот после похудения.">
+              </picture>
+            </li>
+          </ul>
+
+          <button class="compare-slider__toggle" type="button">
+            <span class="visually-hidden">Поменять изображение.</span>
+          </button>
         </div>
-
-        <button class="compare-slider__button" type="button">
-          <span class="visually-hidden">Поменять изображение.</span>
-        </button> -->
       </div>
     </section>
   </main>
