--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,25 +10,27 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header">
+  <header class="main-header container">
     <a class="main-header__logo" href="index.html">
       <picture>
-        <img class="main-header__logo-image" src="" alt="Логотип Кэт Энерджи.">
+        <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" type="image/svg+xml">
+        <source media="(min-width: 768px)" srcset="images/logo-tablet.svg" type="image/svg+xml">
+        <img class="main-header__logo-image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
       </picture>
     </a>
 
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+      <button class="main-nav__toggle" type="button"> <!-- Когда меню открыто - класс main-nav__toggle--opened -->
         <span class="visually-hidden">Открыть меню.</span>
       </button>
 
-      <ul class="main-nav__list site-list">
+      <ul class="main-nav__list site-list"> <!-- Когда меню открыто - класс main-nav__list--opened -->
         <li class="site-list__item">
-          <a class="site-list__link site-list__link--current" href="index.html">Главная</a>
+          <a class="site-list__link" href="index.html">Главная</a>
         </li>
 
         <li class="site-list__item">
-          <a class="site-list__link" href="#" aria-current="page">Каталог продукции</a>
+          <a class="site-list__link site-list__link--current" href="#" aria-current="page">Каталог продукции</a>
         </li>
 
         <li class="site-list__item">
@@ -38,8 +40,8 @@
     </nav>
   </header>
 
-  <main class="main">
-    <h1 class="main__title">Каталог продукции</h1>
+  <main class="main container">
+    <h1 class="main__title section-title">Каталог продукции</h1>
 
     <section class="main__catalog catalog">
       <h2 class="visually-hidden">Каталог товаров.</h2>
