Добавляет изображения в каталог

--- a/source/index.html
+++ b/source/index.html
@@ -17,8 +17,8 @@
   <header class="main-header container">
     <a class="main-header__logo" href="#" aria-current="page">
       <picture>
-        <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" type="image/svg+xml">
-        <source media="(min-width: 768px)" srcset="images/logo-tablet.svg" type="image/svg+xml">
+        <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
+        <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
         <img class="main-header__logo-image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
       </picture>
     </a>
