--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,8 +13,8 @@
   <header class="main-header container">
     <a class="main-header__logo" href="index.html">
       <picture>
-        <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" type="image/svg+xml">
-        <source media="(min-width: 768px)" srcset="images/logo-tablet.svg" type="image/svg+xml">
+        <source type="image/svg+xml" media="(min-width: 1440px)" srcset="images/logo-desktop.svg">
+        <source type="image/svg+xml" media="(min-width: 768px)" srcset="images/logo-tablet.svg">
         <img class="main-header__logo-image" src="images/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
       </picture>
     </a>
@@ -40,201 +40,238 @@
     </nav>
   </header>
 
-  <main class="main container">
-    <h1 class="main__title section-title">Каталог продукции</h1>
+  <main class="main main-catalog">
+    <h1 class="main-catalog__title section-title">Каталог продукции</h1>
 
-    <section class="main__catalog catalog">
+    <section class="main-catalog__catalog catalog">
       <h2 class="visually-hidden">Каталог товаров.</h2>
 
       <ul class="catalog__list">
         <li class="catalog__item">
           <picture>
-            <img class="catalog__image" src="images/catalog-1@1x.png" srcset="images/catalog-1@2x.png 2x" width="68" height="86" alt="Корм Cat Energy PRO 500 грамм.">
+            <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-1-desktop@1x.png 1x, images/catalog-1-desktop@2x.png 2x" width="169" height="210">
+            <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-1-tablet@1x.png 1x, images/catalog-1-tablet@2x.png 2x" width="200" height="210">
+            <img class="catalog__image" src="images/catalog-1-mobile@1x.png" srcset="images/catalog-1-mobile@2x.png 2x" width="140" height="107" alt="Корм Cat Energy PRO 500 грамм.">
           </picture>
-          <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
 
-          <dl class="catalog__properties properties">
-            <div class="properties-item">
-              <dt class="properties__name">Масса</dt>
-              <dd class="properties__value">500 г</dd>
-            </div>
+          <div class="catalog__text">
+            <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
 
-            <div class="properties-item">
-              <dt class="properties__name">Вкус</dt>
-              <dd class="properties__value">Курица</dd>
-            </div>
+            <dl class="catalog__properties properties">
+              <div class="properties-item">
+                <dt class="properties__name">Масса</dt>
+                <dd class="properties__value">500 г</dd>
+              </div>
 
-            <div class="properties-item">
-              <dt class="properties__name">Цена</dt>
-              <dd class="properties__value">700 ₽</dd>
-            </div>
-          </dl>
+              <div class="properties-item">
+                <dt class="properties__name">Вкус</dt>
+                <dd class="properties__value">Курица</dd>
+              </div>
+
+              <div class="properties-item">
+                <dt class="properties__name">Цена</dt>
+                <dd class="properties__value">700 ₽</dd>
+              </div>
+            </dl>
+          </div>
 
           <button class="catalog__button button button--primary">Заказать</button>
         </li>
 
         <li class="catalog__item">
           <picture>
-            <img class="catalog__image" src="images/catalog-2@1x.png" srcset="images/catalog-2@1x.png 2x" width="84" height="100" alt="Корм Cat Energy PRO 1000 грамм.">
+            <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-2-desktop@1x.png 1x, images/catalog-2-desktop@2x.png 2x" width="169" height="210">
+            <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-2-tablet@1x.png 1x, images/catalog-2-tablet@2x.png 2x" width="200" height="210">
+            <img class="catalog__image" src="images/catalog-2-mobile@1x.png" srcset="images/catalog-2-mobile@2x.png 2x" width="140" height="107" alt="Корм Cat Energy PRO 1000 грамм.">
           </picture>
-          <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
 
-          <dl class="catalog__properties properties">
-            <div class="properties-item">
-              <dt class="properties__name">Масса</dt>
-              <dd class="properties__value">1000 г</dd>
-            </div>
+          <div class="catalog__text">
+            <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
 
-            <div class="properties-item">
-              <dt class="properties__name">Вкус</dt>
-              <dd class="properties__value">Курица</dd>
-            </div>
+            <dl class="catalog__properties properties">
+              <div class="properties-item">
+                <dt class="properties__name">Масса</dt>
+                <dd class="properties__value">1000 г</dd>
+              </div>
 
-            <div class="properties-item">
-              <dt class="properties__name">Цена</dt>
-              <dd class="properties__value">1000 ₽</dd>
-            </div>
-          </dl>
+              <div class="properties-item">
+                <dt class="properties__name">Вкус</dt>
+                <dd class="properties__value">Курица</dd>
+              </div>
+
+              <div class="properties-item">
+                <dt class="properties__name">Цена</dt>
+                <dd class="properties__value">1000 ₽</dd>
+              </div>
+            </dl>
+          </div>
 
           <button class="catalog__button button button--primary">Заказать</button>
         </li>
 
         <li class="catalog__item">
           <picture>
-            <img class="catalog__image" src="images/catalog-3@1x.png" srcset="images/catalog-3@2x.png 2x" width="68" height="78" alt="Корм Cat Energy PRO 500 грамм.">
+            <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-3-desktop@1x.png 1x, images/catalog-3-desktop@2x.png 2x" width="169" height="210">
+            <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-3-tablet@1x.png 1x, images/catalog-3-tablet@2x.png 2x" width="200" height="210">
+            <img class="catalog__image" src="images/catalog-3-mobile@1x.png" srcset="images/catalog-3-mobile@2x.png 2x" width="140" height="107" alt="Корм Cat Energy PRO 500 грамм.">
           </picture>
-          <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
 
-          <dl class="catalog__properties properties">
-            <div class="properties-item">
-              <dt class="properties__name">Масса</dt>
-              <dd class="properties__value">500 г</dd>
-            </div>
+          <div class="catalog__text">
+            <h3 class="catalog__title">Cat Energy PRO 500 г</h3>
 
-            <div class="properties-item">
-              <dt class="properties__name">Вкус</dt>
-              <dd class="properties__value">Рыба</dd>
-            </div>
+            <dl class="catalog__properties properties">
+              <div class="properties-item">
+                <dt class="properties__name">Масса</dt>
+                <dd class="properties__value">500 г</dd>
+              </div>
 
-            <div class="properties-item">
-              <dt class="properties__name">Цена</dt>
-              <dd class="properties__value">700 ₽</dd>
-            </div>
-          </dl>
+              <div class="properties-item">
+                <dt class="properties__name">Вкус</dt>
+                <dd class="properties__value">Рыба</dd>
+              </div>
+
+              <div class="properties-item">
+                <dt class="properties__name">Цена</dt>
+                <dd class="properties__value">700 ₽</dd>
+              </div>
+            </dl>
+          </div>
 
           <button class="catalog__button button button--primary">Заказать</button>
         </li>
 
         <li class="catalog__item">
           <picture>
-            <img class="catalog__image" src="images/catalog-4@1x.png" srcset="images/catalog-4@2x.png 2x" width="84" height="100" alt="Корм Cat Energy PRO 1000 грамм.">
+            <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-4-desktop@1x.png 1x, images/catalog-4-desktop@2x.png 2x" width="169" height="210">
+            <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-4-tablet@1x.png 1x, images/catalog-4-tablet@2x.png 2x" width="200" height="210">
+            <img class="catalog__image" src="images/catalog-4-mobile@1x.png" srcset="images/catalog-4-mobile@2x.png 2x" width="140" height="107" alt="Корм Cat Energy PRO 1000 грамм.">
           </picture>
-          <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
 
-          <dl class="catalog__properties properties">
-            <div class="properties-item">
-              <dt class="properties__name">Масса</dt>
-              <dd class="properties__value">1000 г</dd>
-            </div>
+          <div class="catalog__text">
+            <h3 class="catalog__title">Cat Energy PRO 1000 г</h3>
 
-            <div class="properties-item">
-              <dt class="properties__name">Вкус</dt>
-              <dd class="properties__value">Рыба</dd>
-            </div>
+            <dl class="catalog__properties properties">
+              <div class="properties-item">
+                <dt class="properties__name">Масса</dt>
+                <dd class="properties__value">1000 г</dd>
+              </div>
 
-            <div class="properties-item">
-              <dt class="properties__name">Цена</dt>
-              <dd class="properties__value">1000 ₽</dd>
-            </div>
-          </dl>
+              <div class="properties-item">
+                <dt class="properties__name">Вкус</dt>
+                <dd class="properties__value">Рыба</dd>
+              </div>
+
+              <div class="properties-item">
+                <dt class="properties__name">Цена</dt>
+                <dd class="properties__value">1000 ₽</dd>
+              </div>
+            </dl>
+          </div>
 
           <button class="catalog__button button button--primary">Заказать</button>
         </li>
 
         <li class="catalog__item">
           <picture>
-            <img class="catalog__image" src="images/catalog-5@1x.png" srcset="images/catalog-5@2x.png 2x" width="68" height="78" alt="Корм Cat Energy SLIM 500 грамм.">
+            <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-5-desktop@1x.png 1x, images/catalog-5-desktop@2x.png 2x" width="169" height="210">
+            <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-5-tablet@1x.png 1x, images/catalog-5-tablet@2x.png 2x" width="200" height="210">
+            <img class="catalog__image" src="images/catalog-5-mobile@1x.png" srcset="images/catalog-5-mobile@2x.png 2x" width="140" height="107" alt="Корм Cat Energy SLIM 500 грамм.">
           </picture>
-          <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
 
-          <dl class="catalog__properties properties">
-            <div class="properties-item">
-              <dt class="properties__name">Масса</dt>
-              <dd class="properties__value">500 г</dd>
-            </div>
+          <div class="catalog__text">
+            <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
 
-            <div class="properties-item">
-              <dt class="properties__name">Вкус</dt>
-              <dd class="properties__value">Гречка</dd>
-            </div>
+            <dl class="catalog__properties properties">
+              <div class="properties-item">
+                <dt class="properties__name">Масса</dt>
+                <dd class="properties__value">500 г</dd>
+              </div>
 
-            <div class="properties-item">
-              <dt class="properties__name">Цена</dt>
-              <dd class="properties__value">400 ₽</dd>
-            </div>
-          </dl>
+              <div class="properties-item">
+                <dt class="properties__name">Вкус</dt>
+                <dd class="properties__value">Гречка</dd>
+              </div>
+
+              <div class="properties-item">
+                <dt class="properties__name">Цена</dt>
+                <dd class="properties__value">400 ₽</dd>
+              </div>
+            </dl>
+          </div>
 
           <button class="catalog__button button button--primary">Заказать</button>
         </li>
 
         <li class="catalog__item">
           <picture>
-            <img class="catalog__image" src="images/catalog-6@1x.png" srcset="images/catalog-6@2x.png 2x" width="84" height="100" alt="Корм Cat Energy SLIM 1000 грамм.">
+            <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-6-desktop@1x.png 1x, images/catalog-6-desktop@2x.png 2x" width="169" height="210">
+            <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-6-tablet@1x.png 1x, images/catalog-6-tablet@2x.png 2x" width="200" height="210">
+            <img class="catalog__image" src="images/catalog-6-mobile@1x.png" srcset="images/catalog-6-mobile@2x.png 2x" width="140" height="107" alt="Корм Cat Energy SLIM 1000 грамм.">
           </picture>
-          <h3 class="catalog__title">Cat Energy SLIM 1000 г</h3>
 
-          <dl class="catalog__properties properties">
-            <div class="properties-item">
-              <dt class="properties__name">Масса</dt>
-              <dd class="properties__value">1000 г</dd>
-            </div>
+          <div class="catalog__text">
+            <h3 class="catalog__title">Cat Energy SLIM 1000 г</h3>
 
-            <div class="properties-item">
-              <dt class="properties__name">Вкус</dt>
-              <dd class="properties__value">Гречка</dd>
-            </div>
+            <dl class="catalog__properties properties">
+              <div class="properties-item">
+                <dt class="properties__name">Масса</dt>
+                <dd class="properties__value">1000 г</dd>
+              </div>
 
-            <div class="properties-item">
-              <dt class="properties__name">Цена</dt>
-              <dd class="properties__value">700 ₽</dd>
-            </div>
-          </dl>
+              <div class="properties-item">
+                <dt class="properties__name">Вкус</dt>
+                <dd class="properties__value">Гречка</dd>
+              </div>
+
+              <div class="properties-item">
+                <dt class="properties__name">Цена</dt>
+                <dd class="properties__value">700 ₽</dd>
+              </div>
+            </dl>
+          </div>
 
           <button class="catalog__button button button--primary">Заказать</button>
         </li>
 
         <li class="catalog__item">
           <picture>
-            <img class="catalog__image" src="images/catalog-7@1x.png" srcset="images/catalog-7@2x.png 2x" width="72" height="84" alt="Корм Cat Energy SLIM 500 грамм.">
+            <source type="image/png" media="(min-width: 1440px)" srcset="images/catalog-7-desktop@1x.png 1x, images/catalog-7-desktop@2x.png 2x" width="169" height="210">
+            <source type="image/png" media="(min-width: 768px)" srcset="images/catalog-7-tablet@1x.png 1x, images/catalog-7-tablet@2x.png 2x" width="200" height="210">
+            <img class="catalog__image" src="images/catalog-7-mobile@1x.png" srcset="images/catalog-7-mobile@2x.png 2x" width="140" height="107" alt="Корм Cat Energy SLIM 500 грамм.">
           </picture>
-          <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
 
-          <dl class="catalog__properties properties">
-            <div class="properties-item">
-              <dt class="properties__name">Масса</dt>
-              <dd class="properties__value">500 г</dd>
-            </div>
+          <div class="catalog__text">
+            <h3 class="catalog__title">Cat Energy SLIM 500 г</h3>
 
-            <div class="properties-item">
-              <dt class="properties__name">Вкус</dt>
-              <dd class="properties__value">Рис</dd>
-            </div>
+            <dl class="catalog__properties properties">
+              <div class="properties-item">
+                <dt class="properties__name">Масса</dt>
+                <dd class="properties__value">500 г</dd>
+              </div>
 
-            <div class="properties-item">
-              <dt class="properties__name">Цена</dt>
-              <dd class="properties__value">500 ₽</dd>
-            </div>
-          </dl>
+              <div class="properties-item">
+                <dt class="properties__name">Вкус</dt>
+                <dd class="properties__value">Рис</dd>
+              </div>
+
+              <div class="properties-item">
+                <dt class="properties__name">Цена</dt>
+                <dd class="properties__value">500 ₽</dd>
+              </div>
+            </dl>
+          </div>
 
           <button class="catalog__button button button--primary">Заказать</button>
+        </li>
+
+        <li>
+          <div class="catalog__more more">
+            <h3 class="more__title">Показать еще 100500 товаров</h3>
+            <p class="more__description">На самом деле вкусов гораздо больше!</p>
+            <button class="more__button button button--secondary" type="button">Показать все</button>
+          </div>
         </li>
       </ul>
-
-      <div class="catalog__more more">
-        <h3 class="more__title">Показать еще 100500 товаров</h3>
-        <p class="more__description">На самом деле вкусов гораздо больше!</p>
-        <button class="more__button button button--secondary" type="button">Показать все</button>
-      </div>
     </section>
 
     <section class="extra">
